Allows CMS to create new subscription types
